welcome.lessons.welcome.array.search.MaxValue.scala.error
maxValue:3: error: identifier expected but '(' found.
  var max=nums.(0)
               ^